# cosmiccpp-userver

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
configs/: static_config.yaml
postgresql/queries/: DeleteAllocations.sql  DeleteAllocationsView.sql  DeleteBatch.sql  DeleteProduct.sql  InsertAllocationsView.sql  InsertBatch.sql  InsertProduct.sql  SelectProductByBatchRef.sql  SelectProductBySku.sql  UpdateProductVersion.sql
postgresql/schemas/: db-1.sql
schemas/: AddBatch.yaml  Allocate.yaml  AllocationsView.yaml
src/: Common.hpp  Precompile.hpp  greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  main.cpp
src/Adapters/MessageBus/: MessageBusComponent.cpp  MessageBusComponent.hpp
src/Adapters/Notification/: EmailSenderStub.hpp
src/Adapters/Redis/: RedisConfig.hpp  RedisConnectionPool.cpp  RedisConnectionPool.hpp  RedisEventPublisher.cpp  RedisEventPublisher.hpp
src/Adapters/Repository/: DTO.hpp  SqlRepository.cpp  SqlRepository.hpp  TrackingRepository.cpp  TrackingRepository.hpp
src/Adapters/Repository/queries/: DeleteOrderLines.sql  InsertOrderLines.sql  SelectAllocationsView.sql  SelectBatchesBySku.sql  SelectOrderLinesByBatchPk.sql  insertAllocations.sql
src/Domain/: Commands.cpp  Commands.hpp  Events.cpp  Events.hpp  Parsers.cpp  Parsers.hpp
src/Domain/Commands/: AbstractCommand.hpp  Allocate.hpp  ChangeBatchQuantity.hpp  CreateBatch.hpp
src/Domain/Events/: AbstractEvent.hpp  Allocated.hpp  Deallocated.hpp  OutOfStock.hpp
src/Domain/Ports/: IMessage.hpp  IRepository.hpp  IUnitOfWork.hpp  IUpdatableRepository.hpp
src/Domain/Product/: Batch.cpp  Batch.hpp  OrderLine.hpp  Product.cpp  Product.hpp
src/Entrypoints/REST/: AddBatchHandler.cpp  AddBatchHandler.hpp  AllocateHandler.cpp  AllocateHandler.hpp  AllocationsViewHandler.cpp  AllocationsViewHandler.hpp
src/ServiceLayer/: CommandFactory.cpp  CommandFactory.hpp  Exceptions.hpp  Views.cpp  Views.hpp
src/ServiceLayer/MessageBus/: HandlerRegistry.hpp  MessageBus.cpp  MessageBus.hpp
src/ServiceLayer/MessageBus/Handlers/: Handlers.cpp  Handlers.hpp  NotificationHandler.hpp  PublisherHandler.hpp
src/ServiceLayer/UoW/: AbstractUnitOfWork.cpp  AbstractUnitOfWork.hpp  IUnitOfWork.hpp  SqlUnitOfWork.cpp  SqlUnitOfWork.hpp
src/Tests/: Common.hpp  main_test.cpp
src/Tests/Integration/: PgFixture.hpp  Repository.cpp  Repository_test.cpp  UnitOfWork_test.cpp  Views_test.cpp
src/Tests/Unit/: Batches.cpp  FakeRepository.hpp  FakeUnitOfWork.hpp  Handlers.cpp  Handlers_test.cpp  Product_test.cpp  Products.cpp
src/Tests/Utilities/: Common.cpp  Common.hpp  DatabaseFixture_test.hpp  FakeLogger_test.hpp  FakeRepository_test.hpp  FakeUnitOfWork_test.hpp
src/Utilities/: Common.cpp  Common.hpp  ConfigReaders.cpp  ConfigReaders.hpp
